# SpaceShooter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
build_web/: CMakeCache.txt  Makefile  SpaceShooter.html  SpaceShooter.js  SpaceShooter.wasm  cmake_install.cmake
include/Enemy/: Asteroid.hpp
include/Game/: Game.hpp  GameStatut.hpp
include/Player/: Player.hpp
include/Projectile/: Projectile.hpp
include/UI/Button/: Button.hpp
include/UI/Menu/: Menu.hpp
include/UI/TextArea/: TextArea.hpp
include/Utils/: Utils.hpp
old/: road.txt
src/: defines.hpp  main.cpp
src/Animation/: Animation.cpp  Animation.hpp
src/Effect/: Effect.hpp
src/Enemy/: Asteroid.cpp  EnemyManager.cpp  EnemyManager.hpp
src/Enemy/Asteroid/: Asteroid.cpp  Asteroid.hpp  AsteroidType.hpp
src/Game/: Game.cpp  Game.hpp  GameStatut.hpp
src/Player/: Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp
src/Projectile/: Projectile.cpp  Projectile.hpp  ProjectileManager.cpp  ProjectileManager.hpp
src/UI/: UIManager.cpp  UIManager.hpp
src/UI/Button/: Button.cpp
src/UI/Menu/: Menu.cpp  Menu.hpp
src/UI/TextArea/: TextArea.cpp  TextArea.hpp
src/UI/UIComponent/: UIComponent.hpp
src/Utils/: Utils.cpp  Utils.hpp
